--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,8 +15,8 @@ book:
   author: "Alfredo Sánchez Alberca"
   date: "1/11/2022"
   output-file: "examenes-analisis"
-  image: cover.png
-  cover-image: img/logos/infinito.png
+  image: img/logos/sticker.png
+  cover-image: img/logos/sticker.png
   sharing: [twitter, linkedin]
   downloads: [pdf, epub]
   favicon: "img/logos/favicon.ico"
@@ -45,7 +45,7 @@ format:
     papersize: a4
     template-partials:
       - before-body.tex
-    titlegraphic: img/logos/infinito.png
+    titlegraphic: img/logos/sticker.png
     institution: CEU San Pablo
     email: asalber@ceu.es
     web: https://aprendeconalf.es
@@ -60,7 +60,7 @@ format:
     #  - Numbers=Proportional    
     
   epub:
-    cover-image: img/logos/infinito.png
+    cover-image: img/logos/sticker.png
 
 
 
