--- a/_quarto.yml
+++ b/_quarto.yml
@@ -33,6 +33,7 @@ book:
     - examen-2022-11-14.qmd
     - examen-2022-12-21.qmd
     - examen-2023-03-11.qmd
+    - examen-2023-06-01.qmd
 
 format:
   html:
