--- a/_quarto.yml
+++ b/_quarto.yml
@@ -34,6 +34,7 @@ book:
     - examen-2022-12-21.qmd
     - examen-2023-03-11.qmd
     - examen-2023-06-01.qmd
+    - examen-2023-11-15.qmd
 
 format:
   html:
