--- a/_quarto.yml
+++ b/_quarto.yml
@@ -35,6 +35,7 @@ book:
     - examen-2023-03-11.qmd
     - examen-2023-06-01.qmd
     - examen-2023-11-15.qmd
+    - examen-2023-11-14.qmd
 
 format:
   html:
