--- a/_quarto.yml
+++ b/_quarto.yml
@@ -36,6 +36,7 @@ book:
     - examen-2023-06-01.qmd
     - examen-2023-11-15.qmd
     - examen-2023-11-14.qmd
+    - examen-2023-12-22.qmd
 
 format:
   html:
