Añadido examen de 2024-01-11.

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -37,6 +37,7 @@ book:
     - examen-2023-11-15.qmd
     - examen-2023-11-14.qmd
     - examen-2023-12-22.qmd
+    - examen-2024-01-11.qmd
 
 format:
   html:
