Añadido examen de mayo de 2024.

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -39,6 +39,7 @@ book:
     - examen-2023-12-22.qmd
     - examen-2024-01-11.qmd
     - examen-2024-04-16.qmd
+    - examen-2024-05-30.qmd
 
 format:
   html:
