--- a/_quarto.yml
+++ b/_quarto.yml
@@ -40,6 +40,7 @@ book:
     - examen-2024-01-11.qmd
     - examen-2024-04-16.qmd
     - examen-2024-05-30.qmd
+    - examen-2024-11-05.qmd
 
 format:
   html:
