--- a/_quarto.yml
+++ b/_quarto.yml
@@ -42,6 +42,7 @@ book:
     - examen-2024-05-30.qmd
     - examen-2024-11-05.qmd
     - examen-2024-11-11.qmd
+    - examen-2024-12-20.qmd
 
 format:
   html:
