--- a/_quarto.yml
+++ b/_quarto.yml
@@ -44,6 +44,7 @@ book:
     - examen-2024-11-11.qmd
     - examen-2024-12-20.qmd
     - examen-2025-01-14.qmd
+    - examen-2025-04-10.qmd
 
 format:
   html:
