--- a/_quarto.yml
+++ b/_quarto.yml
@@ -45,6 +45,7 @@ book:
     - examen-2024-12-20.qmd
     - examen-2025-01-14.qmd
     - examen-2025-04-10.qmd
+    - examen-2025-05-28.qmd
 
 format:
   html:
