Añadido examen de Análisis I de noviembre de 2025.

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -46,6 +46,7 @@ book:
     - examen-2025-01-14.qmd
     - examen-2025-04-10.qmd
     - examen-2025-05-28.qmd
+    - examen-2025-11-05.qmd
 
 format:
   html:
