--- a/_quarto.yml
+++ b/_quarto.yml
@@ -47,6 +47,7 @@ book:
     - examen-2025-04-10.qmd
     - examen-2025-05-28.qmd
     - examen-2025-11-05.qmd
+    - examen-2025-11-12.qmd
 
 format:
   html:
