--- a/_quarto.yml
+++ b/_quarto.yml
@@ -48,6 +48,7 @@ book:
     - examen-2025-05-28.qmd
     - examen-2025-11-05.qmd
     - examen-2025-11-12.qmd
+    - examen-2025-12-18.qmd
 
 format:
   html:
