Añadido examen de 2026-01-13.

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -49,6 +49,7 @@ book:
     - examen-2025-11-05.qmd
     - examen-2025-11-12.qmd
     - examen-2025-12-18.qmd
+    - examen-2026-01-13.qmd
 
 format:
   html:
